--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="-"><img src="logo.png" alt="logo" style="width:25px;height:25px;"></a></li>
         </ul>
         </header>
-        <div id="wrapper"></div>
+        <div id="wrapper"><p>blaa blaa blaa</p></div>
         <footer>
             <span class="bold"></span>
         </footer>
