--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <header>
-        <ul class="nav">
-            <li id="active"><a href="index.html">KARTTA</a></li>
-            <li><a href="-">TEKIJÄT</a></li>
-            <li><a href="-"><img src="logo.png" alt="logo" style="width:25px;height:25px;"></a></li>
-        </ul>
+            <nav>
+                <ul class="nav">
+                    <li id="active"><a href="index.html">KARTTA</a></li>
+                    <li><a href="-">TEKIJÄT</a></li>
+                    <li><a href="-"><img src="logo.png" alt="logo" style="width:25px;height:25px;"></a></li>
+                </ul>
+            </nav>
         </header>
         <div id="wrapper"><p>blaa blaa blaa</p></div>
         <footer>
